- Fixed bug #37616: DATE_RFC822 does not product RFC 822 dates. (Patch by   Hannes Magnusson)